[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/textures/dialog_box.png" type="Texture" id=1]
[ext_resource path="res://addons/MSG_System/fonts/font_normal.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/Templates/Future-Uses/wanky.shader" type="Shader" id=3]
[ext_resource path="res://src/Scripts/BG.gd" type="Script" id=4]
[ext_resource path="res://addons/MSG_System/fonts/open_sans/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/Scripts/TitleScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/textures/levels/static.png" type="Texture" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://src/Scripts/VolumeSlider.gd" type="Script" id=9]
[ext_resource path="res://src/Templates/UI/SettingsMenu.gd" type="Script" id=10]
[ext_resource path="res://src/Templates/Future-Uses/UIFont.tres" type="DynamicFont" id=11]
[ext_resource path="res://icon_cursed.png" type="Texture" id=12]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=4]
script/source = "extends Button

func close_settings() -> void:
	get_parent()
"

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void vertex() {
	VERTEX.x *= sin(sin(TIME * 2.1) + 599.0);
	VERTEX.y += cos(TIME / 4.0);

}
void fragment() {
	COLOR = vec4(UV, 0.5, 1.0);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE, UV) + abs(sin(TIME)) * 0.1;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[node name="TitleScreen" type="Node2D" groups=[
"level_root",
]]
script = ExtResource( 6 )
intro_scene = "res://src/Scenes/Landing.tscn"
music_to_play = "res://assets/music/slow_low.ogg"

[node name="Control" type="Control" parent="."]
material = SubResource( 1 )
use_parent_material = true
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -116.0
margin_top = -115.0
icon = ExtResource( 8 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="Control"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 429.576
margin_top = -19.464
margin_right = 923.576
margin_bottom = 99.536
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -33.5
margin_right = 70.0
margin_bottom = 33.5
theme = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.984314, 0.984314, 0.984314, 1 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="TextureButton" parent="Control"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.576
margin_top = 131.007
margin_right = 924.576
margin_bottom = 250.007
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Load"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -33.5
margin_right = 63.5
margin_bottom = 33.5
custom_fonts/font = ExtResource( 2 )
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Control"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 428.576
margin_top = 278.791
margin_right = 924.576
margin_bottom = 397.791
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.5
margin_top = -33.5
margin_right = 47.5
margin_bottom = 33.5
custom_fonts/font = ExtResource( 2 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoSave" type="Popup" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/NoSave"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.0
margin_top = -142.0
margin_right = 291.0
margin_bottom = 142.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/NoSave/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = -33.5
margin_right = 224.5
margin_bottom = 33.5
custom_fonts/font = ExtResource( 2 )
text = "NO SAVE AVAILABLE"

[node name="Settings" type="Control" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="Control/Settings/Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.0
margin_top = -285.0
margin_right = 285.0
margin_bottom = 285.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Settings/Panel/NinePatchRect"]
margin_right = 570.0
margin_bottom = 570.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Settings/Panel/NinePatchRect/VBoxContainer"]
margin_right = 570.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Control/Settings/Panel/NinePatchRect/VBoxContainer"]
margin_top = 71.0
margin_right = 570.0
margin_bottom = 146.0
custom_icons/radio_checked = ExtResource( 1 )
custom_icons/checked = ExtResource( 12 )
custom_icons/radio_unchecked = ExtResource( 1 )
custom_icons/unchecked = ExtResource( 8 )
custom_fonts/font = ExtResource( 2 )
text = "Fullscreen"
align = 1
script = SubResource( 3 )

[node name="VolumeSlider" type="HSlider" parent="Control/Settings/Panel/NinePatchRect/VBoxContainer"]
margin_top = 150.0
margin_right = 570.0
margin_bottom = 493.0
size_flags_horizontal = 15
size_flags_vertical = 3
min_value = -20.0
max_value = 0.0
step = 2.0
value = -20.0
tick_count = 10
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Settings/Panel/NinePatchRect/VBoxContainer/VolumeSlider"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -85.5
margin_top = 49.1094
margin_right = 85.5
margin_bottom = 116.109
custom_fonts/font = ExtResource( 11 )
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Control/Settings/Panel/NinePatchRect/VBoxContainer"]
visible = false
margin_top = 420.0
margin_right = 570.0
margin_bottom = 493.0
custom_fonts/font = ExtResource( 2 )
text = "QUIT"
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close" type="Button" parent="Control/Settings/Panel/NinePatchRect/VBoxContainer"]
margin_top = 497.0
margin_right = 570.0
margin_bottom = 570.0
custom_fonts/font = ExtResource( 2 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" type="Node2D" parent="."]
z_index = 1000
z_as_relative = false
script = ExtResource( 4 )

[node name="BG2" type="Sprite" parent="Transition"]
visible = false
material = SubResource( 6 )
scale = Vector2( 3.25811, 3.25811 )
z_index = -6
z_as_relative = false
texture = ExtResource( 7 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="Sprite" parent="Transition"]
material = SubResource( 8 )
z_index = -6
z_as_relative = false
texture = ExtResource( 7 )
centered = false

[node name="BlackScreen" type="Sprite" parent="Transition"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 904.716, 524.107 )
scale = Vector2( 2508.56, 2830.28 )
texture = ExtResource( 8 )

[node name="FadeOut" type="Tween" parent="Transition"]
playback_speed = 0.5
playback/speed = 0.5

[node name="FadeIn" type="Tween" parent="Transition"]
[connection signal="pressed" from="Control/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Control/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Control/Start" to="." method="_on_any_Button_pressed"]
[connection signal="pressed" from="Control/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_any_Button_pressed"]
[connection signal="toggled" from="Control/Settings/Panel/NinePatchRect/VBoxContainer/CheckBox" to="Control/Settings" method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="Control/Settings/Panel/NinePatchRect/VBoxContainer/VolumeSlider" to="Control/Settings/Panel/NinePatchRect/VBoxContainer/VolumeSlider" method="_on_VolumeSlider_value_changed"]
[connection signal="pressed" from="Control/Settings/Panel/NinePatchRect/VBoxContainer/Quit" to="Control/Settings" method="_on_Quit_pressed"]
[connection signal="pressed" from="Control/Settings/Panel/NinePatchRect/VBoxContainer/Close" to="Control/Settings" method="_on_Close_pressed"]
